@@ -1215,7 +1215,8 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY(__NR_name_to_handle_at, sys_name_to_handle_at),// 370
    LINXY(__NR_open_by_handle_at, sys_open_by_handle_at),// 371
    LINXY(__NR_clock_adjtime,     sys_clock_adjtime),    // 372
-   LINXY(__NR_sendmmsg,          sys_sendmmsg)          // 374
+   LINXY(__NR_sendmmsg,          sys_sendmmsg),         // 374
+   LINXY(__NR_getrandom,         sys_getrandom)         // 384
 };
 
 
