@@ -909,7 +909,8 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY (__NR_prlimit64, sys_prlimit64),
    LINXY (__NR_clock_adjtime, sys_clock_adjtime),
    LINXY (__NR_process_vm_readv, sys_process_vm_readv),
-   LINX_ (__NR_process_vm_writev, sys_process_vm_writev)
+   LINX_ (__NR_process_vm_writev, sys_process_vm_writev),
+   LINXY(__NR_getrandom, sys_getrandom)
 };
 
 SyscallTableEntry * ML_(get_linux_syscall_entry) ( UInt sysno )
